tests/dict/faulty_contains.sy
start :: fn {
    a :: {1:0, 2:0, 3:0}
    (0 in a) <=> false
    ("123" in a) <=> true
    (2 in a) <=> "123"
}

// error: $BinOp { lhs: Type::String, .. }
// error: $BinOp { lhs: Type::Bool, rhs: Type::String, .. }
